# Fur-Visualization_OpenGL

./: CMakeLists.txt  README.md  fur_shader.frag  fur_shader.verx
include/: Camera.hxx  Mesh.hxx  Model.hxx  Shader.hxx
include/glad/: glad.h
src/: glad.c  main.cxx
